# timetable

./: LICENSE  README.md
backend/: .env  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  vercel.json
frontend/public/: subject_master_full.json
frontend/src/app/: page.tsx
frontend/src/app/api/upload/: route.ts
